test-suite/tests/roundtrip/invalid/syntax/missing_token/04/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/missing_token/04/input.essence:1:13:
  |
1 | letting x be
  |             ^
Missing Expression

